--- a/app/index.html
+++ b/app/index.html
@@ -73,7 +73,6 @@
 <!-- build:js(app) scripts/vendor.js -->
 <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
 <!-- bower:js -->
-<script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-animate/angular-animate.js"></script>
 <script src="bower_components/json3/lib/json3.js"></script>
@@ -91,6 +90,7 @@
 <script src="bower_components/angularfire/dist/angularfire.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="bower_components/angular-md5/angular-md5.js"></script>
+<script src="bower_components/jquery/dist/jquery.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js(app) scripts/app.js -->
@@ -115,6 +115,7 @@
 <script src="scripts/panel/map/map.directive.js"></script>
 <script src="scripts/panel/meetup/meetup.controller.js"></script>
 <script src="scripts/panel/meetup/meetup.directive.js"></script>
+<script src="scripts/panel/meetup/meetup.service.js"></script>
 <script src="scripts/panel/panel.controller.js"></script>
 <script src="scripts/panel/profile/profile.controller.js"></script>
 <script src="scripts/panel/profile/profile.directive.js"></script>
