--- a/app/scripts/panel/meetup/meetup.html
+++ b/app/scripts/panel/meetup/meetup.html
@@ -1,8 +1,11 @@
 <div layout="row" layout-padding layout-margin>
-    <md-whiteframe class="md-whiteframe-10dp" >
-        <meetup-create>
+    <md-button class="md-primary md-raised"
+               ng-click="meetupCtrl.showDialog($event)">Create
+        Meetup</md-button>
+    <!--<md-whiteframe class="md-whiteframe-10dp" >-->
+        <!--&lt;!&ndash;<meetup-create>&ndash;&gt;-->
 
-        </meetup-create>
-    </md-whiteframe>
+        <!--&lt;!&ndash;</meetup-create>&ndash;&gt;-->
+    <!--</md-whiteframe>-->
 
 </div>
