--- a/app/index.html
+++ b/app/index.html
@@ -106,6 +106,7 @@
 <script src="scripts/components/navbar/navbar.directive.js"></script>
 <script src="scripts/components/sidenav/sidenav.controller.js"></script>
 <script src="scripts/components/sidenav/sidenav.directive.js"></script>
+<script src="scripts/error/error.controller.js"></script>
 <script src="scripts/panel/chat/chat.controller.js"></script>
 <script src="scripts/panel/chat/chat.directive.js"></script>
 <script src="scripts/panel/chat/chat.service.js"></script>
