Start working on business page.

--- a/app/index.html
+++ b/app/index.html
@@ -107,6 +107,9 @@
 <script src="scripts/components/sidenav/sidenav.controller.js"></script>
 <script src="scripts/components/sidenav/sidenav.directive.js"></script>
 <script src="scripts/error/error.controller.js"></script>
+<script src="scripts/panel/business/business.controller.js"></script>
+<script src="scripts/panel/business/business.directive.js"></script>
+<script src="scripts/panel/business/business.service.js"></script>
 <script src="scripts/panel/chat/chat.controller.js"></script>
 <script src="scripts/panel/chat/chat.directive.js"></script>
 <script src="scripts/panel/chat/chat.service.js"></script>
