--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
   <!-- build:css(app) styles/vendor.css -->
   <!-- bower:css -->
   <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+  <link rel="stylesheet" href="bower_components/angular-material-data-table/dist/md-data-table.css" />
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
@@ -72,7 +73,6 @@
 <!-- build:js(app) scripts/vendor.js -->
 <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
 <!-- bower:js -->
-<script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-animate/angular-animate.js"></script>
 <script src="bower_components/json3/lib/json3.js"></script>
@@ -90,6 +90,8 @@
 <script src="bower_components/angularfire/dist/angularfire.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="bower_components/angular-md5/angular-md5.js"></script>
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/angular-material-data-table/dist/md-data-table.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js(app) scripts/app.js -->
