deploy the application for production.

--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,7 @@
 <body ng-app="baoziApp">
 <ui-view></ui-view>
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
 <script>
   !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
       (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
@@ -71,7 +72,6 @@
   ga('send', 'pageview');
 </script>
 <!-- build:js(app) scripts/vendor.js -->
-<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
 <!-- bower:js -->
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-animate/angular-animate.js"></script>
@@ -129,6 +129,34 @@
 <script src="scripts/weather/weather.directive.js"></script>
 <!-- endinjector -->
 <!-- endbuild -->
+<script>
+  angular.module('baoziApp')
+    .directive('googleplace', function () {
+      return {
+        require: "ngModel",
+        link: function (scope, element, attrs, model) {
+          var options = {
+            types: [],
+            componentRestrictions: {}
+          };
+          scope.gPlace = new google.maps.places.Autocomplete(element[0], options);
+          console.log(scope.gPlace);
+          scope.gPlace.addListener('place_changed', function () {
+            var geoComponents = scope.gPlace.getPlace();
+            console.log(geoComponents);
+            var lat = geoComponents.geometry.location.lat();
+            var lng = geoComponents.geometry.location.lng();
+            var detailLoc = [];
+            detailLoc.push(lat, lng);
+            scope.detailLoc = detailLoc;
+            scope.$apply(function () {
+              model.$setViewValue(element.val());
+            });
+          });
+        }
+      };
+    });
+</script>
 </body>
 </html>
 
