--- a/app/index.html
+++ b/app/index.html
@@ -61,14 +61,14 @@
 <body ng-app="baoziApp">
 <ui-view></ui-view>
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
+<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&amp;sensor=false&amp;key=AIzaSyAI4HCemOw16WDwFWhjN7k443LF6PufuRM"></script>
 <script>
   !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
       (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
     r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
   }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-XXXXX-X');
+  ga('create', 'UA-64339999-4');
   ga('send', 'pageview');
 </script>
 <!-- build:js(app) scripts/vendor.js -->
