--- a/app/index.html
+++ b/app/index.html
@@ -111,6 +111,7 @@
 <script src="scripts/error/error.controller.js"></script>
 <script src="scripts/panel/business/business.controller.js"></script>
 <script src="scripts/panel/business/business.directive.js"></script>
+<script src="scripts/panel/business/business.indicator.js"></script>
 <script src="scripts/panel/business/business.service.js"></script>
 <script src="scripts/panel/chat/chat.controller.js"></script>
 <script src="scripts/panel/chat/chat.directive.js"></script>
