--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,7 @@
   ga('create', 'UA-64339999-4');
   ga('send', 'pageview');
 </script>
+<script src="http://d3js.org/d3.v3.min.js"></script>
 <!-- build:js(app) scripts/vendor.js -->
 <!-- bower:js -->
 <script src="bower_components/angular/angular.js"></script>
