Start to work on map page.

--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,9 @@
 <body ng-app="baoziApp">
 <ui-view></ui-view>
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&amp;sensor=false&amp;key=AIzaSyAI4HCemOw16WDwFWhjN7k443LF6PufuRM"></script>
+<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAI4HCemOw16WDwFWhjN7k443LF6PufuRM"-->
+        <!--type="text/javascript"></script>-->
+<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&amp;key=AIzaSyAI4HCemOw16WDwFWhjN7k443LF6PufuRM"></script>
 <script>
   !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
       (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
