Start blog page and price tracker page.

--- a/app/index.html
+++ b/app/index.html
@@ -119,6 +119,8 @@
 <script src="scripts/components/sidenav/sidenav.controller.js"></script>
 <script src="scripts/components/sidenav/sidenav.directive.js"></script>
 <script src="scripts/error/error.controller.js"></script>
+<script src="scripts/panel/blog/blog.controller.js"></script>
+<script src="scripts/panel/blog/blog.service.js"></script>
 <script src="scripts/panel/business/business.controller.js"></script>
 <script src="scripts/panel/business/business.directive.js"></script>
 <script src="scripts/panel/business/business.indicator.js"></script>
@@ -133,6 +135,8 @@
 <script src="scripts/panel/meetup/meetup.directive.js"></script>
 <script src="scripts/panel/meetup/meetup.service.js"></script>
 <script src="scripts/panel/panel.controller.js"></script>
+<script src="scripts/panel/price/price.controller.js"></script>
+<script src="scripts/panel/price/price.service.js"></script>
 <script src="scripts/panel/profile/profile.controller.js"></script>
 <script src="scripts/panel/profile/profile.directive.js"></script>
 <script src="scripts/panel/profile/users.service.js"></script>
