--- a/app/index.html
+++ b/app/index.html
@@ -155,15 +155,17 @@
             componentRestrictions: {}
           };
           scope.gPlace = new google.maps.places.Autocomplete(element[0], options);
+          console.debug(element[0]);
           console.debug(scope.gPlace);
           scope.gPlace.addListener('place_changed', function () {
             var geoComponents = scope.gPlace.getPlace();
             console.debug(geoComponents);
-            var lat = geoComponents.geometry.location.lat();
-            var lng = geoComponents.geometry.location.lng();
-            var detailLoc = [];
-            detailLoc.push(lat, lng);
-            scope.detailLoc = detailLoc;
+            if (typeof geoComponents.geometry === 'undefined'){
+              scope.detailLoc = [44.9, -123.03]
+            }else{
+              scope.detailLoc = [].push(geoComponents.geometry.location.lat(),
+                      geoComponents.geometry.location.lng());
+            }
             scope.$apply(function () {
               model.$setViewValue(element.val());
             });
