--- a/app/index.html
+++ b/app/index.html
@@ -102,6 +102,8 @@
 <script src="bower_components/google-maps-utility-library-v3-keydragzoom/dist/keydragzoom.js"></script>
 <script src="bower_components/js-rich-marker/src/richmarker.js"></script>
 <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
+<script src="bower_components/marked/lib/marked.js"></script>
+<script src="bower_components/angular-marked/dist/angular-marked.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js(app) scripts/app.js -->
